2006-02-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/operators.c (igraph_union, igraph_disjoint_union) :
	igraph_union renamed to igraph_disjoint_union
	(igraph_union_many, igraph_disjoint_union_many) : 
	igraph_union_many renamed to igraph_disjoint_union_many
	(igraph_intersection, igraph_intersection_many) : added
	* examples/simple/igraph_disjoint_union.c : added
	* examples/simple/igraph_intersection.c : added

	* src/vector.c (igraph_vector_filter_smaller) : added
	* examples/simple/vector.c : updated
	
	* examples/simple/igraph_motifs_randesu.c : bug corrected

2006-02-25  Tamas Nepusz  <ntamas@rmki.kfki.hu>

        * interfaces/python/graphobject.c : added igraphmodule_Graph_union
	* src/operators.c : corrected igraph_union bug
	* interfaces/python/igraphobject.c : added igraphmodule_convex_hull
	* interfaces/python/test.py : added new test cases

2006-02-24  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/common.h : compatibility changes to make it
	compile with Python 2.3
	* interfaces/python/graphobject.h : slight documentation corrections
	* interfaces/python/graphobject.c : added igraphmodule_Graph_write_graphml
	* interfaces/python/igraphmodule.c : added function for replacing
	progress handler
	* src/progress.c : now the default progress handler is empty
	* src/layout.c : reports progress of KK and FR layout
	* src/other.c : added function to calculate convex hull
	* tests/testsuite.at, tests/other.at : added test case for
	convex hulls
	* examples/simple/igraph_convex_hull.c,
	examples/simple/igraph_convex_hull.out : added
	
2006-02-23  Gabor Csardi  <csardi@rmki.kfki.hu>

	* src/operators.c (igraph_union, igraph_union_many) : added

2006-02-23  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* interfaces/python/graphobject.h,
	interfaces/python/graphobject.c : added interface for igraph_rewire
	and igraph_write_graphml
	* examples/simple/igraph_rewire.c,
	examples/simple/igraph_rewire.out : added test case for igraph_rewire