@@ -26,6 +26,12 @@ AT_COMPILE_CHECK([simple/igraph_disjoint_union.c],
 	[simple/igraph_disjoint_union.out])
 AT_CLEANUP
 
+AT_SETUP([Union (igraph_union):])
+AT_KEYWORDS([igraph_union, union])
+AT_COMPILE_CHECK([simple/igraph_union.c], 
+	[simple/igraph_union.out])
+AT_CLEANUP
+
 AT_SETUP([Intersection (igraph_intersection):])
 AT_KEYWORDS([igraph_intersection, intersection])
 AT_COMPILE_CHECK([simple/igraph_intersection.c], 
